# Gesture-control

./: .gitignore  AgendaBeforeInitialPoll[1].docx  BestMovingAndClickingVersion.py  Combination.py  CombinationMain.py  Demo.py  Leftbrightness_volume.py  README.md  Readme.md  Untitled.ipynb  Untitled1.ipynb  UpDown.py  __main__.py  brightnessControl.py  clicking 2.py  clicking.py  combination.py  diabolical_code.py  gestureRecognizer.ipynb  hand_landmarker.ipynb  main-combination.py  main.py  mouse-clicking.py  mouse-moving.py  pyproject.toml  tabSwitch.py  twohandedgesture.py
Setup/: setUp.py
utils/: brightness_controll.py  cv.py  page_reload.py  scroll.py  tab_switch.py  zoom.py
