[tool.poetry]
name = "gesture-control"
version = "0.1.0"
description = ""
authors = ["Nguyendo1234 <do.do@student.nhlstenden.com>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pyautogui = "^0.9.54"
comtypes = "^1.4.2"
pycaw = "^20240210"
screen-brightness-control = "^0.23.0"
mediapipe = "^0.10.14"
tk = "^0.1.0"
types-pyautogui = "^0.9.3.20240406"
pydirectinput = "^1.0.4"
pykalman = "^0.9.7"
pynput = "^1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
